; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_ltablib.c_maxn.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_ltablib.c_maxn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TTABLE = common dso_local global i32 0, align 4
@LUA_TNUMBER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @maxn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maxn(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @LUA_TTABLE, align 4
  %7 = call i32 @luaL_checktype(i32* %5, i32 1, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_pushnil(i32* %8)
  br label %10

10:                                               ; preds = %30, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i64 @lua_next(i32* %11, i32 1)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %31

14:                                               ; preds = %10
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @lua_pop(i32* %15, i32 1)
  %17 = load i32*, i32** %2, align 8
  %18 = call i64 @lua_type(i32* %17, i32 -1)
  %19 = load i64, i64* @LUA_TNUMBER, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %30

21:                                               ; preds = %14
  %22 = load i32*, i32** %2, align 8
  %23 = call i64 @lua_tonumber(i32* %22, i32 -1)
  store i64 %23, i64* %4, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %3, align 8
  %26 = icmp sgt i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load i64, i64* %4, align 8
  store i64 %28, i64* %3, align 8
  br label %29

29:                                               ; preds = %27, %21
  br label %30

30:                                               ; preds = %29, %14
  br label %10

31:                                               ; preds = %10
  %32 = load i32*, i32** %2, align 8
  %33 = load i64, i64* %3, align 8
  %34 = call i32 @lua_pushnumber(i32* %32, i64 %33)
  ret i32 1
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i64 @lua_next(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i64 @lua_tonumber(i32*, i32) #1

declare dso_local i32 @lua_pushnumber(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
